<resources>
    <string name="app_name">PMS</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string-array name="items">
        <item>Select Status</item>
        <item>New</item>
        <item>In Progress</item>
        <item>In Review</item>
        <item>Pending</item>
        <item>Close</item>
        <item>Paused</item>
    </string-array>
    <!-- Strings related to login -->
    <string name="hello_world">Hello world!</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enterEmail">Enter Email Address</string>
    <string name="EmailText">Email Address</string>
    <string name="submit">Submit</string>
    <string name="backLogin">Go Login</string>
    <string name="spinner_title">Select Project</string>
    <string name="forgot_password_title">Forget Password</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="project_list">Project List</string>
    <string name="change_password">Change Password</string>
    <string name="notification">Notification</string>
    <string name="logout">Logout</string>
    <string name="oldPass">Old Password</string>
    <string name="newPass">New Password</string>
    <string name="newConfirmPass">Confirm Password</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="phoneno">Phone No.</string>
    <string name="address">Address</string>
    <string name="newProject">Add New Project</string>
    <string name="save">Save</string>
    <string name="newProjectDescription">Project Description</string>
    <string name="take_leave">Take Leaves</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apply_date">Apply Date</string>
    <string name="from_date">From Date</string>
    <string name="joining_date">Joining Date</string>
    <string name="position">Position</string>
    <string name="full_name">Full Name</string>
    <string name="to_date">To Date</string>
    <string name="NoDays">No Of Days</string>
    <string name="comment">Comment</string>
    <string name="reason">Reason</string>
    <string name="leave_type">Leave Type</string>
    <string name="status">Status</string>
    <string name="apply_leave">Apply For Leave</string>
    <string name="holiday">Holidays</string>
    <string name="leave_from">Leave From:</string>
    <string name="leave_to">Leave To:</string>
    <string name="date_formate">DD-MM-YYYY</string>
    <string name="number_formate">0</string>
    <string name="leave_details">Leave Details</string>
    <string name="Fail">Upload Failed</string>


</resources>
