<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfileFragment">

    <ImageView
        android:id="@+id/ivEditProfileImg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:text="@string/full_name"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivEditProfileImg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/gray"
            android:orientation="vertical"
            android:padding="@dimen/margin_8dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8dp"
                android:background="@color/text_color"
                android:hint="@string/firstname"
                android:inputType="text"
                android:padding="@dimen/margin_8dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8dp"
                android:background="@color/text_color"
                android:hint="@string/lastname"
                android:inputType="text"
                android:padding="@dimen/margin_8dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8dp"
                android:background="@color/text_color"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/margin_8dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="@dimen/margin_8dp"
                android:background="@color/text_color"
                android:hint="@string/address"
                android:inputType="textMultiLine"
                android:padding="@dimen/margin_8dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8dp"
                android:background="@color/text_color"
                android:hint="@string/joining_date"
                android:inputType="date"
                android:padding="@dimen/margin_8dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8dp"
                android:background="@color/text_color"
                android:hint="@string/position"
                android:inputType="text"
                android:padding="@dimen/margin_8dp" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>