<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/menu_group_1">
        <item
            android:id="@+id/nav_project_list"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="Allocated Tasks" />
        <item
            android:id="@+id/nav_task_Details"
            android:icon="@drawable/ic_take_leave_white_24dp"
            android:title="Task Details"/>
        <item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/ic_lock_open_black_24dp"
            android:title="@string/change_password" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notifications_none_black_24dp"
            android:title="@string/notification" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/logout" />
    </group>
    <group android:id="@+id/menu_group_2">
        <item
            android:id="@+id/menu_settings"
            android:title="Settings" />
        <item
            android:id="@+id/menu_about"
            android:title="About" />
    </group>
</menu>