<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:id="@+id/cvTakeLeave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_border"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="@dimen/margin_24dp"
            android:layout_height="@dimen/margin_24dp"
            android:layout_gravity="right"
            android:layout_margin="@dimen/margin_5dp"
            android:src="@drawable/ic_cancel_gray_24dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_8dp">

            <LinearLayout
                android:id="@+id/llApplyDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/margin_8dp">

                <TextView
                    android:id="@+id/tvApplyDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/apply_date"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_ApplyDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="13-07-2018" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llFromDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llApplyDate"
                android:orientation="horizontal"
                android:padding="@dimen/margin_8dp">

                <TextView
                    android:id="@+id/tvFromDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/from_date"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_FromDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="13-07-2018" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llToDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llFromDate"
                android:orientation="horizontal"
                android:padding="@dimen/margin_8dp">

                <TextView
                    android:id="@+id/tvToDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/to_date"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_ToDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="13-07-2018" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llNoDays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llToDate"
                android:orientation="horizontal"
                android:padding="@dimen/margin_8dp">

                <TextView
                    android:id="@+id/tvNoDays"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/NoDays"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_NoDays"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llNoDays"
                android:orientation="horizontal"
                android:padding="@dimen/margin_8dp">

                <TextView
                    android:id="@+id/tvComment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/comment"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_Comment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Comment Description" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llReason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llComment"
                android:orientation="horizontal"
                android:padding="@dimen/margin_8dp">

                <TextView
                    android:id="@+id/tvReason"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reason"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_Reason"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Reason Description Reason Description" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llLeaveType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llReason"
                android:orientation="horizontal"
                android:padding="@dimen/margin_8dp">

                <TextView
                    android:id="@+id/tvLeaveType"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/leave_type"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_LeaveType"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="SL" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llLeaveType"
                android:orientation="horizontal"
                android:padding="@dimen/margin_8dp">

                <TextView
                    android:id="@+id/tvStatus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/status"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_Status"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Approved" />
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>